<resources>
    <string name="app_name">iHome</string>
    <string name="where">Bedroom, Bathroom, Living Room</string>
    <string name="humid_percent">Humidity %</string>
    <string name="_50">50%(100L)</string>
    <string name="_75">75%(150L)</string>
    <string name="_25">25%(50L)</string>
    <string name="_low">Low(0L)</string>
    <string name="indicator"><![CDATA[Indicator >>]]></string>
    <string name="water_reserve_level">Water Reserve Level</string>
    <string name="max">Max(200L)</string>
    <string name="water_value">Water Level></string>
    <string name="temp_celsius">celsius</string>
    <string name="percentage"><![CDATA[percentage(%)>]]></string>
    <string name="symbol">%</string>
    <string name="status">Status :</string>
</resources>