<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ultrasonic.Ultrasonic">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/percentage"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/percentage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/percentage"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <ProgressBar
        android:id="@+id/indicator"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="216dp"
        android:max="100"
        android:progressDrawable="@drawable/progress_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="56dp"
        android:text="@string/max"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/indicator"
        app:layout_constraintTop_toTopOf="@+id/indicator"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginBottom="60dp"
        android:text="@string/_75"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/indicator" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginBottom="64dp"
        android:text="@string/_50"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/indicator"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginBottom="44dp"
        android:text="@string/_25"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/indicator" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:text="@string/_low"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/indicator"
        app:layout_constraintEnd_toStartOf="@+id/indicator" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="337dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/water_reserve_level"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/indicator"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="20dp"
        android:text="@string/water_value"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <TextView
        android:id="@+id/water_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />


</androidx.constraintlayout.widget.ConstraintLayout>